--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,10 +21,11 @@ if (flutterVersionName == null) {
     flutterVersionName = "1.0"
 }
 
-apply plugin: "com.android.application"
-apply plugin: "kotlin-android"
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+    id "dev.flutter.flutter-plugin"
+}
 android {
     namespace "com.example.roku_remote"
     compileSdkVersion 34
