--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,22 @@
+pluginManagement {
+    def flutterSdkPath = System.getenv("FLUTTER_SDK") ?: ""
+    if (!flutterSdkPath.isEmpty()) {
+        includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+plugins {
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    id "com.android.application" version "8.1.0" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.0" apply false
+}
+
 include ':app'
 
 def localProperties = new Properties()
@@ -8,7 +27,10 @@ if (localPropertiesFile.exists()) {
     }
 }
 
-def flutterProjectRoot = rootProject.projectDir.parentFile.toPath()
+def flutterProjectRoot = localProperties.getProperty("flutter.project.path")
+if (flutterProjectRoot == null) {
+    flutterProjectRoot = rootProject.projectDir.parentFile.toPath()
+}
 
 def plugins = new Properties()
 def pluginsFile = new File(flutterProjectRoot.toFile(), ".flutter-plugins")
