--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,10 +21,10 @@ if (flutterVersionName == null) {
     flutterVersionName = "1.0"
 }
 
-plugins {
-    id "com.android.application"
-    id "kotlin-android"
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+
 android {
     namespace "com.example.roku_remote"
     compileSdkVersion 34
