Update Gradle configuration and add Gradle wrapper validation

--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -17,9 +17,13 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '17'
+        cache: 'gradle'
         
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
+        
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v2
     
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
