--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,9 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx4096M
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.configureondemand=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
